<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Database\Eloquent\Model;
use Illuminate\Database\Eloquent\SoftDeletes;


class Turno extends Model
{
    use HasFactory, SoftDeletes;
    protected $fillable = ['nombre'];
    // Relación con Oferta Académica
    public function ofertasAcademicas()
    {
        return $this->hasMany(OfertaAcademica::class);
    }
}
